--- a/services.html
+++ b/services.html
@@ -27,15 +27,26 @@
 
 				<!-- One -->
 					<section id="one">
-<!-- 						<header class="major">
-							<h2>About Me</h2>
-						</header> -->
-						<ul class="actions">
-							<li><a href="about.html" class="button">About Me</a></li>
+							<ul class="actions">
+							<li><a href="index.html" class="button">Home</a></li>
 						</ul>
-						<ul class="actions">
-							<li><a href="services.html" class="button">My Services</a></li>
-						</ul>
+						<header class="major">
+							<h2>Services</h2>
+						</header>
+						<p>
+							<h2>Business English Communications and Management Consultancy</h2>
+							Enhance your company’s global impact with expert guidance on clear, professional English communication and effective management strategies. I help businesses build confidence when dealing with English-speaking clients, partners, and stakeholders, ensuring your messages are delivered with precision, authority, and cultural sensitivity.</p>
+						<p>
+							<h2>Presentation skills coaching</h2>
+							I provide practical coaching to transform presentations into impactful, engaging experiences. From structuring your narrative to mastering confident delivery in English, I’ll help you capture and hold your audience’s attention.
+						</p>
+						<p>
+							<h2>Cultural differences training</h2>
+							Understanding cultural nuances is key to successful international collaboration. I help professionals navigate British and other English-speaking business cultures to avoid misunderstandings and build stronger, lasting relationships.
+						</p>
+<!-- 						<ul class="actions">
+							<li><a href="#" class="button">My Services</a></li>
+						</ul> -->
 					</section>
 
 <!-- 					<section id="two">
