big site changes

--- a/testimonials.html
+++ b/testimonials.html
@@ -27,19 +27,51 @@
 
 				<!-- One -->
 					<section id="one">
+
 						<ul class="actions">
 							<li><a href="about.html" class="button">About Me</a></li>
 							<li><a href="services.html" class="button">Services</a></li>
 							<li><a href="testimonials.html" class="button">Testimonials</a></li>
 						</ul>
 						<header class="major">
-							<h2>Hi, I'm Morgan 👋</h2>
+							<h2>Testimonials</h2>
 						</header>
-						<p>A British consultant with 20+ years’ experience in software development, project management, and technical leadership. Based in Lyon, I help businesses communicate with confidence and clarity in English, ensuring they build stronger relationships with international clients, partners, and stakeholders. 
-						</br></br>
-						Through tailored coaching in business English, presentations, sales pitches, and negotiations, I sharpen communication and leadership skills while also providing practical strategies for time management, problem solving, and stress reduction. 
-						</br></br>
-						My goal is to equip teams and individuals with the tools they need to excel globally, stay productive, and foster leadership skills for international success. I specialise in clear messaging, conflict resolution, and proactive stress and burnout management.</p>
+
+						<p>
+						“Morgan brought a rare blend of
+						technical expertise and leadership
+						insight to our team. As someone who
+						truly understands both the engineering
+						side and the executive mindset, he
+						helped us overcome long-standing
+						communication issues between
+						departments. His workshops were clear,
+						engaging, and full of practical strategies
+						that we started using immediately. He’s a
+						fantastic communicator and an even
+						better coach—personable,
+						knowledgeable, and completely tuned in
+						to the real challenges of today’s
+						workplace.”</br>
+						<p style="text-align: right;">— S. Andersonn
+						</p>
+						<p>
+						“Morgan is one of those rare consultants
+						who can hold a room of technical leads
+						and C-suite executives with equal
+						confidence. His presentation style is
+						natural, compelling, and grounded in
+						real-world experience. The feedback
+						from his sessions was overwhelmingly
+						positive, and our team felt seen, heard,
+						and motivated. We were especially
+						impressed by how he helped bridge
+						communication gaps that had been
+						holding us back. If you need someone
+						who can connect the dots between
+						business and tech—he’s your guy.”</br>
+						<p style="text-align: right;">— J. Martin
+						</p>
 					</section>
 
 				<!-- Three -->
