added french language sections

--- a/services.html
+++ b/services.html
@@ -27,6 +27,7 @@
 
 				<!-- One -->
 					<section id="one">
+						<h1>Clear communication, confident leadership</h1>
 							<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="about.html" class="button">About Me</a></li>
@@ -104,7 +105,8 @@ satisfaction.
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.</p>
+						<p>If you think my services will benefit your business, drop me a line and let’s meet.
+						</br>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
