--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
 
 				<!-- One -->
 					<section id="one">
+						<h1>Clear communication, confident leadership</h1>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="services.html" class="button">Services</a></li>
@@ -47,6 +48,97 @@
 							</br></br>My expertise spans clear communication, negotiation, and leadership, as well as soft skills such as confidence building, mediation, and conflict resolution. With a strong technical background, I understand the challenges and limitations that technical teams face, enabling me to bridge the gap between complex ideas and clear, persuasive messaging. In the corporate world, I often faced high pressure situations and saw how they could affect my teams' mental health. This lead to developing my own systems to ensure I could identify early warning signs and implement practical strategies before issues escalate.
 
 							</br></br>I started my own consultancy because I’m passionate about helping companies improve their English communication to work more efficiently and avoid misunderstandings. Clear communication not only boosts productivity but also reduces stress, overwork, and the mental health issues that often come from poor business practices. My goal is to support both the business and its people by creating healthier, more effective workplaces.</p>
+
+<h3>Version Française</h3>
+<h2>About Me</h2>
+Je suis un consultant britannique en
+communication d’entreprise et en
+management, avec plus de 20 ans
+d’expérience dans le monde de l’entreprise.
+Aujourd’hui basé à Lyon, je travaille avec des
+entreprises locales et à distance, en les aidant
+à communiquer et à collaborer avec
+assurance avec des clients, partenaires et
+parties prenantes anglophones.
+</br></br>
+Après plus de deux décennies passées dans le
+monde de l’entreprise — en tant que
+développeur logiciel, responsable d’équipes IT
+et coordinateur de projets transversaux — j’ai
+compris à quel point une communication claire
+est essentielle pour que tout fonctionne
+efficacement. Au fil du temps, j’ai constaté que
+les malentendus entre services, parties
+prenantes et équipes projets — en particulier
+lorsqu’ils impliquaient des personnes de
+cultures ou de pays différents — entraînaient
+souvent des retards, des erreurs et un travail
+inutile.
+</br></br>
+Ce qui m’a le plus frappé, c’est à quel point les
+barrières linguistiques, même entre personnes
+parlant couramment l’anglais, pouvaient
+ralentir les échanges de manière involontaire.
+Pour les non-anglophones en particulier, ces
+écarts créaient de la frustration, du gaspillage
+de ressources, et compliquaient l’alignement
+autour des objectifs communs.
+</br></br>
+De cette expérience, j’ai tiré des stratégies
+pratiques pour aider les équipes à mieux
+communiquer — notamment celles dont
+l’anglais n’est pas la langue maternelle. Mon
+objectif est de faire en sorte que chacun se
+sente écouté, compris et confiant dans ce qu’il
+fait. Quand la communication fonctionne, les
+organisations constatent moins d’erreurs, une
+progression plus rapide et de meilleurs
+résultats. Et cela rend le travail plus collaboratif
+et moins stressant pour tout le monde.
+</br></br>
+Mon but ultime est de créer des
+environnements où les gens peuvent
+s’épanouir — où la clarté favorise l’efficacité, et
+où le travail d’équipe devient gratifiant plutôt
+que frustrant. Il ne s’agit pas seulement de
+résoudre des problèmes, mais de construire
+une culture fondée sur la connexion, le respect
+et la réussite partagée.
+</br></br>
+Mon expertise couvre la communication claire,
+la négociation et le leadership, ainsi que les
+compétences interpersonnelles telles que le
+développement de la confiance en soi, la
+médiation et la résolution de conflits. Grâce à
+ma solide expérience technique, je comprends
+les défis et les contraintes auxquels sont
+confrontées les équipes techniques, ce qui me
+permet de faire le lien entre idées complexes et
+messages clairs et convaincants.
+</br></br>
+Dans le monde de l’entreprise, j’ai souvent été
+confronté à des situations sous haute pression
+et j’ai vu à quel point cela pouvait impacter la
+santé mentale de mes équipes. Cela m’a
+poussé à développer mes propres systèmes
+pour repérer les signes avant-coureurs et
+mettre en place des stratégies concrètes avant
+que les problèmes ne s’aggravent.
+</br></br>
+J’ai créé mon propre cabinet de conseil parce
+que je suis passionné par l’idée d’aider les
+entreprises à améliorer leur communication en
+anglais, afin de travailler plus efficacement et
+d’éviter les malentendus. Une communication
+claire ne renforce pas seulement la
+productivité ; elle réduit aussi le stress, la
+surcharge de travail et les problèmes de santé
+mentale qui découlent souvent de mauvaises
+pratiques professionnelles. Mon objectif est de
+soutenir à la fois l’entreprise et ses
+collaborateurs en créant des environnements
+de travail plus sains et plus efficaces.
+</br></br>
 						<ul class="actions">
 							<li><a href="services.html" class="button">Services</a></li>
 						</ul>
@@ -55,7 +147,8 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.</p>
+						<p>If you think my services will benefit your business, drop me a line and let’s meet.
+						</br>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
