fixed mistake on about me page

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 							</br></br>I started my own consultancy because I’m passionate about helping companies improve their English communication to work more efficiently and avoid misunderstandings. Clear communication not only boosts productivity but also reduces stress, overwork, and the mental health issues that often come from poor business practices. My goal is to support both the business and its people by creating healthier, more effective workplaces.</p>
 
 <h3>Version Française</h3>
-<h2>About Me</h2>
+<h2>À propos de moi</h2>
 Je suis un consultant britannique en
 communication d’entreprise et en
 management, avec plus de 20 ans
