--- a/testimonials.html
+++ b/testimonials.html
@@ -100,8 +100,7 @@
 						<li><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Morgan Pugh 2018 - 2025</li>
-						<li>All rights reserved</li>
+						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
