--- a/services.html
+++ b/services.html
@@ -65,23 +65,13 @@ communication, prioritisation, and
 collaboration with English-speaking teams and
 clients.
 						</p>
-						<p>
-						<h2>Small Business and Startup Specific Services</h2>
-For small businesses and startups aiming to
-expand internationally, I provide tailored
-coaching to improve English communication,
-ensuring you present your services, proposals,
-and brand messages with clarity and
-professionalism, building trust and confidence
-with English-speaking partners and clients.
-						</p>
-						<p>
+<hr class="custom-line">
+<h1>Individual Employee Services
 						<h2>Burn out mitigation strategies</h2>
 Prevent burnout before it happens. I provide
 practical strategies to identify early signs of
 fatigue, create sustainable work habits, and
 maintain energy and focus over the long term.
-						</p>
 						<p>
 						<h2>Stress reduction strategies</h2>
 Learn how to manage stress effectively with
@@ -97,7 +87,17 @@ offering tailored methods to reduce overwork
 and maintain long-term motivation and
 satisfaction.
 						</p>
-
+						<p>
+<hr class="custom-line">							
+						<h1>Small Business and Startup Specific Services</h1>
+For small businesses and startups aiming to
+expand internationally, I provide tailored
+coaching to improve English communication,
+ensuring you present your services, proposals,
+and brand messages with clarity and
+professionalism, building trust and confidence
+with English-speaking partners and clients.
+						</p>
 					</section>
 
 
