--- a/testimonials.html
+++ b/testimonials.html
@@ -35,10 +35,10 @@
 						</ul>
 						<header class="major">
 							<h2>Testimonials</h2>
-						</header>
-"Working with Morgan was like giving my business a double espresso shot—suddenly everything was clearer, sharper, and moving in the right direction. Their programme wasn’t just helpful; it was genuinely enjoyable. Practical, punchy, and packed with insights I could actually use, not just nod at and forget the next day. I came in overwhelmed and left with a plan, a system, and a grin. If you get the chance to work with them—take it. Your future self will high-five you."<p style="text-align: right;">— M. Hopson
+						</header><blockquote>
+"Working with Morgan was like giving my business a double espresso shot—suddenly everything was clearer, sharper, and moving in the right direction. Their programme wasn’t just helpful; it was genuinely enjoyable. Practical, punchy, and packed with insights I could actually use, not just nod at and forget the next day. I came in overwhelmed and left with a plan, a system, and a grin. If you get the chance to work with them—take it. Your future self will high-five you."</blockquote><p style="text-align: right;">— M. Hopson
 						</p>
-						<p>
+						<blockquote>
 						“Morgan brought a rare blend of
 						technical expertise and leadership
 						insight to our team. As someone who
@@ -53,10 +53,10 @@
 						better coach—personable,
 						knowledgeable, and completely tuned in
 						to the real challenges of today’s
-						workplace.”</br>
+						workplace.”</blockquote>
 						<p style="text-align: right;">— S. Andersonn
 						</p>
-						<p>
+						<blockquote>
 						“Morgan is one of those rare consultants
 						who can hold a room of technical leads
 						and C-suite executives with equal
@@ -70,7 +70,7 @@
 						communication gaps that had been
 						holding us back. If you need someone
 						who can connect the dots between
-						business and tech—he’s your guy.”</br>
+						business and tech—he’s your guy.”</blockquote>
 						<p style="text-align: right;">— J. Martin
 						</p>
 						
