--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Mon objectif est de fournir aux équipes et aux individus les outils nécessaire
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<h3><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"></h3></a>
 										<a href="mailto:morgan@pugh.dev">morgan@pugh.dev</a>
 									</li>
 								</ul>
@@ -78,7 +78,7 @@ Mon objectif est de fournir aux équipes et aux individus les outils nécessaire
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
