--- a/services.html
+++ b/services.html
@@ -111,7 +111,7 @@ with English-speaking partners and clients.
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<h3><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"></h3></a>
 										<a href="mailto:morgan@pugh.dev">morgan@pugh.dev</a>
 									</li>
 								</ul>
@@ -127,7 +127,7 @@ with English-speaking partners and clients.
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
