--- a/services.html
+++ b/services.html
@@ -123,7 +123,9 @@ with English-speaking partners and clients.
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><h5><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"><span class="label">Email</span></a>
+							<a href="mailto:morgan@pugh.dev" class="label">morgan@pugh.dev</a></h5>
+						</li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
