--- a/testimonials.html
+++ b/testimonials.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
 					<h1><strong>I'm Morgan</strong>, an 'English as a second language' business consultant. </br>
-						Specialising in cultural differences and clear communication.
+						Specialising in cultural differences and efficiency.
 				</div>
 			</header>
 
