--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an 'English as a second language' business consultant. </br>
-						Specialising in cultural differences and effective management strategies.
+					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
 				</div>
 			</header>
 
