--- a/services.html
+++ b/services.html
@@ -27,9 +27,10 @@
 				<!-- One -->
 					<section id="one">
 						<h1>Clear communication, confident leadership</h1>
-							<ul class="actions">
+						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="about.html" class="button">About Me</a></li>
+							<li><a href="services.html" class="button">Services</a></li>
 							<li><a href="testimonials.html" class="button">Testimonials</a></li>
 						</ul>
 						<header class="major">
@@ -121,14 +122,14 @@ with English-speaking partners and clients.
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<ul class="icons">
-						<li><h5><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@pugh.dev" class="label">morgan@pugh.dev</a></h5>
-						</li>
-					</ul>
+					<div class="labeled-icons">
+						<ul class="labeled-icons"><li><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"><span class="label">Email</span></a>
+							<a href="mailto:morgan@pugh.dev" class="label">morgan@pugh.dev</a>
+						</li></ul>
+					</div>
 					<ul class="copyright">
 						<li>&copy; Morgan Pugh 2018 - 2025. All rights reserved</li>
-						<li><a href="http://html5up.net">HTML5 UP</a></li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
