--- a/testimonials.html
+++ b/testimonials.html
@@ -36,7 +36,7 @@
 						<header class="major">
 							<h2>Testimonials</h2>
 						</header><blockquote>
-"Working with Morgan was like giving my business a double espresso shot—suddenly everything was clearer, sharper, and moving in the right direction. Their programme wasn’t just helpful; it was genuinely enjoyable. Practical, punchy, and packed with insights I could actually use, not just nod at and forget the next day. I came in overwhelmed and left with a plan, a system, and a grin. If you get the chance to work with them—take it. Your future self will high-five you."</blockquote><p style="text-align: right;">— M. Hopson
+"Working with Morgan was like giving my business a double espresso shot—suddenly everything was clearer, sharper, and moving in the right direction. Their programme wasn’t just helpful; it was genuinely enjoyable. Practical, punchy, and packed with insights I could actually use, not just nod at and forget the next day. I came in overwhelmed and left with a plan, a system, and a grin. If you get the chance to work with them-take it. Your future self will high-five you."</blockquote><p style="text-align: right;">— M. Hopson
 	<hr class="custom-line">	
 						</p>
 						<blockquote>
