changes to titles

--- a/services.html
+++ b/services.html
@@ -48,12 +48,12 @@
 							Understanding cultural nuances is key to successful international collaboration. I help professionals navigate British and other English-speaking business cultures to avoid misunderstandings and build stronger, lasting relationships.
 						</p>
 						<p>
-						<h2>Sales pitch training for clarity</h2>
+						<h2>Sales pitch clarity training</h2>
 
 						Turn your ideas into persuasive, structured, and concise sales pitches that resonate with English-speaking audiences. I’ll help you refine your messaging, sharpen your delivery, and increase your chances of winning business or investment.
 						</p>
 						<p>
-						<h2>Negotiations coaching</h2>
+						<h2>Negotiation coaching</h2>
 						Master the art of negotiation in English with strategies to clearly express your goals, build trust, and achieve win-win outcomes in high-stakes discussions with international partners.
 						</p>
 						<p>
