added Moon President testimonial name lol

--- a/testimonials.html
+++ b/testimonials.html
@@ -55,7 +55,7 @@
 						knowledgeable, and completely tuned in
 						to the real challenges of today’s
 						workplace.”</blockquote>
-						<p style="text-align: right;">- S. Andersonn
+						<p style="text-align: right;">- P. Moon
 						</p>
 						<hr class="custom-line">	
 						<blockquote>
