--- a/services.html
+++ b/services.html
@@ -111,8 +111,8 @@ with English-speaking partners and clients.
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@pugh.dev">morgan@pugh.dev</a>
+										<h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></h3></a>
+										<a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
 									</li>
 								</ul>
 							</div>
@@ -123,8 +123,8 @@ with English-speaking partners and clients.
 			<footer id="footer">
 				<div class="inner">
 					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@pugh.dev" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@pugh.dev" class="label">morgan@pugh.dev</a>
+						<ul class="labeled-icons"><li><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
+							<a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
 						</li></ul>
 					</div>
 					<ul class="copyright">
