--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
 				<!-- One -->
 					<section id="one">
+						<div style="text-align: center;">
+  						<img src="images/original_logo.png" alt="" style="width: 200px; height: auto;" />
+						</div>
+
 						<h1>Clear communication, confident leadership</h1>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
