--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Morgan Pugh - Business coaching and consultancy</title>
+		<title>Morgan Pugh Consulting - Business coaching and consultancy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,10 +27,11 @@
 				<!-- One -->
 					<section id="one">
 						<div style="text-align: center;">
-  						<img src="images/original_logo.png" alt="" style="width: 200px; height: auto;" />
+  						<img src="images/original_logo_cropped.png" alt="" style="width: 20%; height: auto;" />
 						</div>
-
-						<h1>Clear communication, confident leadership</h1>
+						<div style="text-align: center; font-style: italic;">
+						<h2>Clear communication, confident leadership</h2>
+						</div>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="about.html" class="button">About Me</a></li>
