added logo to all pages

--- a/testimonials.html
+++ b/testimonials.html
@@ -26,7 +26,12 @@
 
 				<!-- One -->
 					<section id="one">
-					<h1>Clear communication, confident leadership</h1>
+						<div style="text-align: center;">
+  						<img src="images/original_logo_cropped.png" alt="" style="width: 30%; height: auto;" />
+						</div>
+						<div style="text-align: center; font-style: italic;">
+						<h2>Clear communication, confident leadership</h2>
+						</div>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
 							<li><a href="about.html" class="button">About Me</a></li>
