--- a/services.html
+++ b/services.html
@@ -27,7 +27,7 @@
 				<!-- One -->
 					<section id="one">
 						<div style="text-align: center;">
-  						<img src="images/logo2.png" alt="" style="width: 40%; height: auto;" />
+  						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
 						</div>
 						<div style="text-align: center; font-style: italic;">
 						<h2>Clear communication, confident leadership</h2>
