separated english and french versions of website

--- a/about-en.html
+++ b/about-en.html
@@ -44,20 +44,30 @@
 							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
 						</ul>
 						<header class="major">
-							<h2>Hi, I'm Morgan 👋</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>A British consultant with 20+ years’ experience in software development, project management, and technical leadership. Based in Lyon, I help businesses communicate with confidence and clarity in English, ensuring they build stronger relationships with international clients, partners, and stakeholders. 
-						</br></br>
-						Through tailored coaching in business English, presentations, sales pitches, and negotiations, I sharpen communication and leadership skills while also providing practical strategies for time management, problem solving, and stress reduction. 
-						</br></br>
-						My goal is to equip teams and individuals with the tools they need to excel globally, stay productive, and foster leadership skills for international success. I specialise in clear messaging, conflict resolution, and proactive stress and burnout management.</p>
-					</section>
+						<p>
+							I am a British business communications and management consultant with over 20 years of corporate experience. Now based in Lyon, I work with businesses both locally and remotely, helping them confidently communicate and collaborate with English-speaking clients, partners, and stakeholders. 
+
+							</br></br>After more than two decades in the corporate world working as a software developer, leading IT teams, and navigating cross-functional projects I’ve learned how crucial clear communication is for keeping things running smoothly. Over time, I noticed that misunderstandings between departments, stakeholders, and project teams — especially when people from different cultures or countries were involved — often led to delays, errors, and unnecessary rework. 
+
+							</br></br>What stood out was how language barriers, even among fluent English speakers, could unintentionally slow things down. For non- native English speakers in particular, these gaps often caused frustration, wasted resources, and made it harder to stay aligned with the team’s goals. From this experience, I’ve built practical strategies to help teams communicate more clearly — especially for those where English isn’t their first language. 
+
+							</br></br>My goal is to ensure everyone feels heard, understood, and confident in what they’re doing. When communication clicks, organisations see fewer mistakes, faster progress, and better results. Plus, it makes work feel more collaborative and less stressful for everyone involved. Ultimately, my focus is on creating environments where people can thrive — where clarity leads to efficiency, and teamwork feels rewarding instead of frustrating. It’s not just about fixing problems; it’s about building a culture that values connection, respect, and shared success. 
+
+							</br></br>My expertise spans clear communication, negotiation, and leadership, as well as soft skills such as confidence building, mediation, and conflict resolution. With a strong technical background, I understand the challenges and limitations that technical teams face, enabling me to bridge the gap between complex ideas and clear, persuasive messaging. In the corporate world, I often faced high pressure situations and saw how they could affect my teams' mental health. This lead to developing my own systems to ensure I could identify early warning signs and implement practical strategies before issues escalate.
+
+							</br></br>I started my own consultancy because I’m passionate about helping companies improve their English communication to work more efficiently and avoid misunderstandings. Clear communication not only boosts productivity but also reduces stress, overwork, and the mental health issues that often come from poor business practices. My goal is to support both the business and its people by creating healthier, more effective workplaces.</p>
+
+						<ul class="actions">
+							<li><a href="services-en.html" class="button">Services</a></li>
+						</ul>
+					</section>					
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
@@ -73,7 +83,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<div class="labeled-icons">
+				<div class="labeled-icons">
 						<ul class="labeled-icons"><li><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
 							<a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
 						</li></ul>
