--- a/about-fr.html
+++ b/about-fr.html
@@ -16,46 +16,37 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
+					<a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+					<h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.
 				</div>
 			</header>
 
 		<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
+<!-- One -->
 					<section id="one">
 						<div style="text-align: center;">
   						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
 						</div>
 						<div style="text-align: center; font-style: italic;">
-						<h2>Clear communication, confident leadership</h2>
+						<h2>Une communication claire, un leadership affirmé</h2>
+						</div>
+						<div style="text-align: center;">
+  							<a href="index.html">English</a> | 
+  							<a href="index-fr.html">Français</a>
+						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
 						</div>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Home</a></li>
-							<li><a href="about.html" class="button">About Me</a></li>
-							<li><a href="services.html" class="button">Services</a></li>
-							<li><a href="testimonials.html" class="button">Testimonials</a></li>
+							<li><a href="index-fr.html" class="button">Accueil</a></li>
+							<li><a href="about-fr.html" class="button">À propos de moi</a></li>
+							<li><a href="services-fr.html" class="button">Services</a></li>
+							<li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
 						</ul>
 						<header class="major">
-							<h2>About Me</h2>
+							<h2>À propos de moi</h2>
 						</header>
-						<p>
-							I am a British business communications and management consultant with over 20 years of corporate experience. Now based in Lyon, I work with businesses both locally and remotely, helping them confidently communicate and collaborate with English-speaking clients, partners, and stakeholders. 
 
-							</br></br>After more than two decades in the corporate world working as a software developer, leading IT teams, and navigating cross-functional projects I’ve learned how crucial clear communication is for keeping things running smoothly. Over time, I noticed that misunderstandings between departments, stakeholders, and project teams — especially when people from different cultures or countries were involved — often led to delays, errors, and unnecessary rework. 
-
-							</br></br>What stood out was how language barriers, even among fluent English speakers, could unintentionally slow things down. For non- native English speakers in particular, these gaps often caused frustration, wasted resources, and made it harder to stay aligned with the team’s goals. From this experience, I’ve built practical strategies to help teams communicate more clearly — especially for those where English isn’t their first language. 
-
-							</br></br>My goal is to ensure everyone feels heard, understood, and confident in what they’re doing. When communication clicks, organisations see fewer mistakes, faster progress, and better results. Plus, it makes work feel more collaborative and less stressful for everyone involved. Ultimately, my focus is on creating environments where people can thrive — where clarity leads to efficiency, and teamwork feels rewarding instead of frustrating. It’s not just about fixing problems; it’s about building a culture that values connection, respect, and shared success. 
-
-							</br></br>My expertise spans clear communication, negotiation, and leadership, as well as soft skills such as confidence building, mediation, and conflict resolution. With a strong technical background, I understand the challenges and limitations that technical teams face, enabling me to bridge the gap between complex ideas and clear, persuasive messaging. In the corporate world, I often faced high pressure situations and saw how they could affect my teams' mental health. This lead to developing my own systems to ensure I could identify early warning signs and implement practical strategies before issues escalate.
-
-							</br></br>I started my own consultancy because I’m passionate about helping companies improve their English communication to work more efficiently and avoid misunderstandings. Clear communication not only boosts productivity but also reduces stress, overwork, and the mental health issues that often come from poor business practices. My goal is to support both the business and its people by creating healthier, more effective workplaces.</p>
-
-<h3>Version Française</h3>
-<h2>À propos de moi</h2>
 Je suis un consultant britannique en
 communication d’entreprise et en
 management, avec plus de 20 ans
@@ -145,15 +136,14 @@ collaborateurs en créant des environnements
 de travail plus sains et plus efficaces.
 </br></br>
 						<ul class="actions">
-							<li><a href="services.html" class="button">Services</a></li>
+							<li><a href="services-fr.html" class="button">Services</a></li>
 						</ul>
 					</section>					
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						</br>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
+						<h2>Contact</h2>
+						Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
