--- a/index-fr.html
+++ b/index-fr.html
@@ -16,8 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies.
+					<a href="index-fr.html" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+					<!-- <h1><strong>I'm Morgan</strong>, an English business consultant specialising in cultural differences, employee well-being and effective management strategies. -->
+					<h1><strong>Je suis Morgan</strong>, consultant en affaires anglophone spécialisé dans les différences culturelles, le bien-être des employés et les stratégies de management efficaces.
 				</div>
 			</header>
 
@@ -30,7 +31,7 @@
   						<img src="images/logo.png" alt="" style="width: 40%; height: auto;" />
 						</div>
 						<div style="text-align: center; font-style: italic;">
-						<h2>Clear communication, confident leadership</h2>
+						<h2>Une communication claire, un leadership affirmé</h2>
 						</div>
 						<div style="text-align: center;">
   							<a href="index.html">English</a> | 
@@ -38,26 +39,26 @@
 						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
 						</div>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Home</a></li>
-							<li><a href="about-en.html" class="button">About Me</a></li>
-							<li><a href="services-en.html" class="button">Services</a></li>
-							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
+							<li><a href="index-fr.html" class="button">Accueil</a></li>
+							<li><a href="about-fr.html" class="button">À propos de moi</a></li>
+							<li><a href="services-fr.html" class="button">Services</a></li>
+							<li><a href="testimonials-fr.html" class="button">Avis clients</a></li>
 						</ul>
-						<header class="major">
-							<h2>Hi, I'm Morgan 👋</h2>
-						</header>
-						<p>A British consultant with 20+ years’ experience in software development, project management, and technical leadership. Based in Lyon, I help businesses communicate with confidence and clarity in English, ensuring they build stronger relationships with international clients, partners, and stakeholders. 
-						</br></br>
-						Through tailored coaching in business English, presentations, sales pitches, and negotiations, I sharpen communication and leadership skills while also providing practical strategies for time management, problem solving, and stress reduction. 
-						</br></br>
-						My goal is to equip teams and individuals with the tools they need to excel globally, stay productive, and foster leadership skills for international success. I specialise in clear messaging, conflict resolution, and proactive stress and burnout management.</p>
-					</section>
 
+					<header class="major">
+					<h2>Salut, moi c'est Morgan 👋</h2>
+					</header>
+
+Consultant britannique avec plus de 20 ans d’expérience en développement logiciel, gestion de projet et leadership technique. Basé à Lyon, j’aide les entreprises à communiquer avec assurance et clarté en anglais, afin de renforcer leurs relations avec des clients, partenaires et parties prenantes internationaux.
+</br></br>
+Grâce à un accompagnement personnalisé en anglais des affaires, présentations, argumentaires de vente et négociations, j'améliore les compétences en communication et en leadership, tout en proposant des stratégies concrètes pour la gestion du temps, la résolution de problèmes et la réduction du stress.
+</br></br>
+Mon objectif est de fournir aux équipes et aux individus les outils nécessaires pour exceller à l’international, rester productifs et développer des compétences en leadership adaptées au succès global. Je suis spécialisé dans la clarté des messages, la résolution de conflits et la gestion proactive du stress et du burnout.
+</section>
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						</p>
+						<h2>Contact</h2>
+						Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
