--- a/services-en.html
+++ b/services-en.html
@@ -24,6 +24,7 @@
 		<!-- Main -->
 			<div id="main">
 
+<!-- One -->
 				<!-- One -->
 					<section id="one">
 						<div style="text-align: center;">
@@ -32,11 +33,16 @@
 						<div style="text-align: center; font-style: italic;">
 						<h2>Clear communication, confident leadership</h2>
 						</div>
+						<div style="text-align: center;">
+  							<a href="index.html">English</a> | 
+  							<a href="index-fr.html">Français</a>
+						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
+						</div>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
-							<li><a href="about.html" class="button">About Me</a></li>
-							<li><a href="services.html" class="button">Services</a></li>
-							<li><a href="testimonials.html" class="button">Testimonials</a></li>
+							<li><a href="about-en.html" class="button">About Me</a></li>
+							<li><a href="services-en.html" class="button">Services</a></li>
+							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
 						</ul>
 						<header class="major">
 							<h2>Services</h2>
@@ -109,9 +115,8 @@ with English-speaking partners and clients.
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
+						<h2>Contact</h2>
 						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						</br>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
