--- a/testimonials-en.html
+++ b/testimonials-en.html
@@ -32,11 +32,16 @@
 						<div style="text-align: center; font-style: italic;">
 						<h2>Clear communication, confident leadership</h2>
 						</div>
+						<div style="text-align: center;">
+  							<a href="index.html">English</a> | 
+  							<a href="index-fr.html">Français</a>
+						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
+						</div>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Home</a></li>
-							<li><a href="about.html" class="button">About Me</a></li>
-							<li><a href="services.html" class="button">Services</a></li>
-							<li><a href="testimonials.html" class="button">Testimonials</a></li>
+							<li><a href="about-en.html" class="button">About Me</a></li>
+							<li><a href="services-en.html" class="button">Services</a></li>
+							<li><a href="testimonials-en.html" class="button">Testimonials</a></li>
 						</ul>
 						<header class="major">
 							<h2>Testimonials</h2>
@@ -87,7 +92,6 @@
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>If you think my services will benefit your business, drop me a line and let’s meet.
-						</br>Si vous pensez que mes services peuvent bénéficier à votre entreprise, contactez-moi et rencontrons-nous</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
