--- a/testimonials-fr.html
+++ b/testimonials-fr.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>MRP Consulting - Business coaching and consultancy</title>
+		<title>MRP Consulting - Coaching et conseil en entreprise</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
