--- a/about-fr.html
+++ b/about-fr.html
@@ -33,8 +33,8 @@
 						<h2>Une communication claire, un leadership affirmé</h2>
 						</div>
 						<div style="text-align: center;">
-  							<a href="index.html">English</a> | 
-  							<a href="index-fr.html">Français</a>
+  							<a href="about-en.html">English</a> | 
+  							<a href="about-fr.html">Français</a>
 						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
 						</div>
 						<ul class="actions">
