--- a/testimonials-en.html
+++ b/testimonials-en.html
@@ -33,8 +33,8 @@
 						<h2>Clear communication, confident leadership</h2>
 						</div>
 						<div style="text-align: center;">
-  							<a href="index.html">English</a> | 
-  							<a href="index-fr.html">Français</a>
+  							<a href="testimonials-en.html">English</a> | 
+  							<a href="testimonials-fr.html">Français</a>
 						  <hr style="width: 115px; margin: 10px auto; border: 0.5px solid #ffffff;">
 						</div>
 						<ul class="actions">
