changed email address to use mrpconsulting.fr

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
+										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
 									</li>
 								</ul>
 							</div>
@@ -74,8 +74,8 @@
 			<footer id="footer">
 				<div class="inner">
 					<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
+							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
 						</li></ul>
 					</div>
 					<ul class="copyright">
