--- a/about-fr.html
+++ b/about-fr.html
@@ -148,8 +148,8 @@ de travail plus sains et plus efficaces.
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"></h3></a>
-										<a href="mailto:morgan@morganpugh.com">morgan@morganpugh.com</a>
+										<h3><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"></h3></a>
+										<a href="mailto:morgan@mrpconsulting.fr">morgan@mrpconsulting.fr</a>
 									</li>
 								</ul>
 							</div>
@@ -160,8 +160,8 @@ de travail plus sains et plus efficaces.
 			<footer id="footer">
 				<div class="inner">
 				<div class="labeled-icons">
-						<ul class="labeled-icons"><li><a href="mailto:morgan@morganpugh.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
-							<a href="mailto:morgan@morganpugh.com" class="label">morgan@morganpugh.com</a>
+						<ul class="labeled-icons"><li><a href="mailto:morgan@mrpconsulting.fr" class="icon solid fa-envelope"><span class="label">Email</span></a>
+							<a href="mailto:morgan@mrpconsulting.fr" class="label">morgan@mrpconsulting.fr</a>
 						</li></ul>
 					</div>
 					<ul class="copyright">
